syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.stanford.futuredata.uniserve";
option java_outer_classname = "BrokerDataStoreProto";

package brokerdatastore;

// Communication from brokers to datastores.
service BrokerDataStore {
    // Execute a simple (eventually consistent) write query.
    rpc SimpleWriteQuery (stream WriteQueryMessage) returns (WriteQueryResponse) {}
    // Execute (2PC-style) a write query.
    rpc WriteQuery (stream WriteQueryMessage) returns (WriteQueryResponse) {}
    // Make a read query to a DataStore server.  Return a response.
    rpc AnchoredReadQuery (AnchoredReadQueryMessage) returns (AnchoredReadQueryResponse) {}
    // Make a read query to a DataStore server.  Return a response.
    rpc ShuffleReadQuery (ShuffleReadQueryMessage) returns (ShuffleReadQueryResponse) {}

    rpc MapQuery(stream MapQueryMessage) returns (stream MapQueryResponse) {}
    rpc CollectVolatileShuffleQuery(stream CollectVolatileShuffleQueryMessage) returns (CollectVolatileShuffleQueryResponse){}
    rpc AbortVolatileShuffleQuery(AbortVolatileShuffleQueryMessage) returns (AbortVolatileShuffleQueryResponse){}
    rpc VolatileScatterQuery(VolatileScatterQueryMessage) returns(VolatileScatterQueryResponse){}
    rpc AbortVolatileGatherQuery(AbortVolatileGatherQueryMessage) returns (AbortVolatileGatherQueryResponse){}
    rpc VolatileGatherQuery(VolatileGatherQueryMessage) returns (VolatileGatherQueryResponse){}
}
message VolatileGatherQueryMessage{
    int64 transactionID = 1;
    bytes plan = 2;
}
message VolatileGatherQueryResponse{
    bytes gatherResult = 1;
    int32 state = 2;
}
message AbortVolatileGatherQueryMessage{
    int64 transactionID = 1;
}
message AbortVolatileGatherQueryResponse{}

message VolatileScatterQueryMessage{
    bytes plan = 1;
    int64 transactionID = 2;
    int32 actorCount = 3;
}
message VolatileScatterQueryResponse{
    bytes idsDsGather = 1;
    int32 state = 2;
}

message AbortVolatileShuffleQueryMessage{
    int64 transactionID = 1;
}
message AbortVolatileShuffleQueryResponse{}
message CollectVolatileShuffleQueryMessage{
    int64 transactionID = 1;
    bytes data = 2;
    int32 state = 3;
}
message CollectVolatileShuffleQueryResponse{
    int32 state = 1;
}

message MapQueryMessage{
    bytes serializedQuery = 1;
    bytes rowData = 2;
    int32 state = 3;
}

message MapQueryResponse{
    bytes transformedData = 1;
    int32 state = 2;
}


message WriteQueryMessage {
    int32 shard = 1;
    bytes serializedQuery = 2;
    bytes rowData = 3;
    int64 txID = 4;
    int32 writeState = 5;
}

message WriteQueryResponse {
    int32 returnCode = 1;
}

message AnchoredReadQueryMessage {
    int32 targetShard = 1;
    bytes serializedQuery = 2;
    int32 numRepartitions = 3;
    int64 txID = 4;
    int64 lastCommittedVersion = 5;
    bytes targetShards = 6;
    bytes intermediateShards = 7;
}

message AnchoredReadQueryResponse {
    int32 returnCode = 1;
    bytes response = 2;
}

message ShuffleReadQueryMessage {
    bytes serializedQuery = 1;
    int32 repartitionNum = 2;
    int32 numRepartitions = 3;
    int64 txID = 4;
    bytes targetShards = 5;
}

message ShuffleReadQueryResponse {
    int32 returnCode = 1;
    bytes response = 2;
}